client/src/App.css
/* ... */
.menu-icon {
    margin-top: 35px;
    cursor: pointer;
    width: 35px;
    height: 25px;
}

.menu-profile-container {
    width: 100%;
    height: 300px;
    background-color: white;
    background-image: url('img/bg-shadow.png');
    background-repeat: repeat-x;
    background-position: top;
}

.menu-profile-image {
    float: left;
    margin: 20px;
    margin-left: 30px;
    margin-right: 0;
    height: 260px;
}

.menu-profile-info {
    width: 250px;
    height: 300px;
    float: right;
}

.menu-profile-name {
    margin: 0;
    padding: 0;
    margin-top: 65px;
    font-size: 30px;
    color: navy;
    text-align: center;
}

.menu-profile-stats {
    width: 250px;
    height: 200px;
    background-image: url('./img/vertical-separator.png');
    background-size: 8px 120px;
    background-repeat: no-repeat;
    background-position: center center;
}

.menu-profile-stats div {
    color: #888888;
    padding: 20px;
    padding-top: 60px;
    float: left;
    text-align: center;
    width: 125px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.menu-profile-stats img {
    margin-top: 10px;
    width: 30px;
}

.menu-profile-stat-values {
    font-weight: bold;
    font-size: 22px;
}

h2 {
    font-family: 'Kalam', cursive;
}

a {
    color: white;
    text-decoration: underline;
}

.line-separator {
    height: 2px;
    background: white;
    border-bottom: 1px solid black;

}

.course-selector {
    min-height: 300px;
    margin-top: 100px;
    color: white;
    padding: 0;
}

.course-selector h2 {
    color: white;
}

.course-selector li {
    list-style: none;
    display: inline-block;
    margin: 0 20px;
}

.course-icon {
    display: inline-block;
    margin: 20px;
}

.course-icon img {
    display: inline-block;
    -webkit-transition: -webkit-transform .8s ease-in-out;
    transition: transform .8s ease-in-out;
}

.course-icon img:hover {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
}

.course-icon div {
    margin-top: 10px;
}

/***********************
FLASHCARDS
***********************/

.flashcard {
    position: relative;
    margin: auto;
    color: black;
    padding: 15px;
    padding-right: 25px;
    padding-bottom: 25px;
    width: 366px;
    height: 366px;
    text-align: left;
    background-image: url('./img/bg-question.png');
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.flashcardImageContainer {
    text-align: center;
}

.flashcardImage {
    background-color: white;
    border: 2px solid black;
}

.flashcardAlphaImage {

}

.button-answer {
    font-family: 'Orbitron', cursive;
    position: relative;
}

.flashcard-title {
    color: gray;
}

.flashcard-content {
    display: table;
    width: 100%;
    height: 90%;
}

.flashcard-content-text {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: 40px;
    padding-top: 10px;
    padding-bottom: 20px;
    display: table-cell;
    vertical-align: middle;
    clear: both;
}

.flashcard-footer {
    position: absolute;
    bottom: 28px;
    font-size: 10px;
    color: gray;
}

.flashcard-thumbnail {
    width: 120px;
    float: right;
    margin: 0;
    margin-left: 10px;
    margin-bottom: 10px;
}

.fullscreen-container {
    display: table;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.9);
    z-index: 1000;
    position: fixed;
    width: 100%;
    height: 100%;
    text-align: center;
}

.fullscreen-image-subtitle-container {
    width: 100%;
    text-align: center;
    color: white;
    font-size: 16px;
    position: fixed;
    z-index: 1001;
    bottom: 0;
    margin: auto;
}

.fullscreen-image-subtitle-container p {
    height: 40px;
    line-height: 40px;
    width: 250px;
    margin: auto;
    background-color: rgba(0, 0, 0, 0.50);
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.fullscreen-image-container {
    text-align: center;
    width: 100%;
    height: 100%;
    vertical-align: middle;
    display: table-cell;
    overflow: auto;
}

.flashcard-thumbnail-enlarged {
}

.answer-buttons-container {
    position: absolute;
    width: 100%;
    height: 180px;
    bottom: 0;
    background-color: white;
    background-image: url('img/bg-shadow-bottom.png');
    background-repeat: repeat-x;
    background-position: top;
}

.answer-button {
    margin-left: 10px;
    margin-right: 10px;
    cursor: pointer;
    width: 120px;
    height: 120px;
}

.levelUpImage {
    height: 30%;
}

.skip-tutorial-button {
    background-image: url('img/button-skip-tutorial.png');
    background-repeat: repeat-x;
    background-position: top;
    background-size: cover;
    margin: auto;
    margin-top: 20px;
    cursor: pointer;
    width: 400px;
    height: 70px;
    vertical-align: middle;
    line-height: 70px;

}

.skip-tutorial-button:hover {
    color: #eaeaea;
}

.confirm-level-up-button {
    background-image: url('img/button-skip-tutorial.png');
    background-repeat: repeat-x;
    background-position: top;
    background-size: cover;
    margin: auto;
    margin-top: 20px;
    cursor: pointer;
    width: 400px;
    height: 70px;
    vertical-align: middle;
    line-height: 70px;

}

.confirm-level-up-button:hover {
    color: #eaeaea;
}

.scrollable-text {
    max-height: 100%;
    overflow: scroll;
}

.center-text {
    text-align: center;
}

.input-answer {
    width: 100%;
    height: 60%;
}

.hidden > p {
    display: none;
}

.visible > p {
    display: block;
}

/***********************
INTRODUCTION
***********************/

.make-it-bigger:hover {
    transform: scale(1.3);
}

#bigger-font {
    font-size: 24px;
    font-weight: bold;
}

/***********************
TUTORIAL
***********************/

#video {
    color: white;
}

#video h2 {
    margin: 0;
    padding: 0;
    margin-bottom: 10px;
}

.welldone {
    margin: 180px 0;
}
/* ... */

